# peanut-butter

./: README.md  pyproject.toml
peanut_butter/: indexer.py  io.py  model.py
tests/: test_peanut_butter.py
tests/fixtures/: sample.json
