[tool.poetry]
name = "peanut-butter"
version = "0.1.0"
description = ""
authors = ["Tom Watson <tom.m.watson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
scipy = "^1.4.1"
pandas = "^1.0.2"
attr = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bpython = "^0.18"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
